# reality

./: .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  BONUS_REWARD_REMOVAL_GUIDE.md  CFFI_BINDINGS.md  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  ENVIRONMENT.md  FILEINDEX.md  JSON_LEVEL_FORMAT_SUMMARY.md  Makefile  README.md  TODO.md  VIEWER_RECORDING.md  all_cpp_results.xml  analyze_recording.py  analyze_recording_v2.py  build.sh  check_metadata_size  check_metadata_size.cpp  cmake_install.cmake  compile_commands.json  cpp_cpu_results.xml  cpp_gpu_results.xml  cpp_viewer_results.xml  debug_action_format.py  debug_crash.py  debug_crash_loop.py  debug_inference.sh  debug_level_calculation.py  debug_output.txt  debug_recording.rec  debug_replay_actions.py  default_level  default_level_data.h  demo.rec  first8_rec.csv  fresh_test.rec  (+55 more)
.claude/: Network Persistent State  dataCenter.json  preferences.json  settings.local.json  window-state.json
.clirope/: config.py
.ropeproject/: history  history.json
codegen/: README.md  dump_ast.py  generate_dataclass_structs.py  generate_python_constants.py  generate_python_structs.py  madrona_constants.json  project_constants.json  pyproject.toml
docs/: ADD_COMPONENT.md  ADD_SYSTEM.md  COLLISION_SYSTEM.md  CUDA_SETUP_GUIDE.md  ECS_ARCHITECTURE.md  EXPORT_COMPONENT.md  GDB_GUIDE.md  GPU_PERFORMANCE_BASELINE.md  HEADLESS_MODE.md  HEADLESS_QUICK_REFERENCE.md  INITIALIZATION_SEQUENCE.md  LEVEL_GEN_CLEANUP_PLAN.md  LIDAR_REMOVAL_GUIDE.md  OTHERAGENTS_REMOVAL_PLAN.md  README.md  README_BINDINGS.md  REMOVE_AGENT_INDEX_FROM_ACTION_SPACE.md  REMOVING_ACTION_COMPONENT.md  SINGLE_AGENT_PLAN.md  STEP_SEQUENCE.md  VIEWER_GUIDE.md  VIEWER_RECORDING.md  multi_level_replay_understanding.md  status.md  using_trajectory_logging.md
examples/: tileset_level_example.py  torchrl_example.py
include/: madrona_escape_room_c_api.h  madrona_escape_room_c_constants.h
levels/: README.md  circular_target_demo.json  combined_progression_12x12_to_24x24_spawn_random.json  combined_progression_32_levels_spawn_random.json  compile_levels.py  corridor.lvl  default.json  default.lvl  default.txt  east_corridor.json  east_corridor.lvl  east_corridor.txt  east_corridor_from_txt.lvl  empty_20x48.json  empty_room_16x16.json  empty_room_progression_12x12_to_24x24_spawn_random.json  example_auto_boundary.json  example_boundary_offset.json  four_corners.json  four_corners.lvl  four_room_20x20_lvl1.json  four_room_20x20_lvl32.json  four_room_progression_32_levels_spawn_random.json  full_progression_159_levels_spawn_random.json  full_progression_159_levels_spawn_random_lidar_64beam_360fov_noise_prop0.005_base0.02.json  full_progression_159_levels_spawn_random_sensor_noise.json  full_progression_65_levels_spawn_random.json  full_progression_95_levels_spawn_random.json  generate_combined_progression.py  generate_empty_room_progression.py  generate_four_room_progression.py  generate_full_progression.py  generate_maze_levels.py  generate_progressive_levels.py  generate_progressive_size_levels.py  harmonic_target_demo.json  lidar_64_beam_360.json  lvl10_19x48_gen.json  lvl11_19x48_gen.json  lvl12_19x48_gen.json  (+62 more)
madrona_escape_room/: __init__.py  __init__.pyi  auto_debug_structs.py  ctypes_bindings.py  dataclass_structs.py  dataclass_utils.py  debug_structs.py  default_level.py  generated_constants.py  generated_dataclasses.py  generated_madrona_constants.py  generated_structs.py  level_compiler.py  level_compiler_old.py  level_io.py  madrona.pyi  magic_structs.py  manager.py  patch_structs.py  sensor_config.py  tensor.py
rotation_test_1759033789/: direct_run_1_trajectory.csv
scripts/: build_cffi.py  build_dlpack_extension.py  capture_level_screenshot.py  check_python_repl_hook.sh  infer.py  (+28 more)
src/: CMakeLists.txt  Makefile  asset_data.cpp  asset_descriptors.cpp  asset_descriptors.hpp  asset_ids.hpp  asset_registry.cpp  asset_registry.hpp  bindings.cpp  camera_controller.cpp  camera_controller.hpp  cmake_install.cmake  consts.hpp  default_level.cpp  dlpack_extension.cpp  file_inspector.cpp  headless.cpp  level_gen.cpp  level_gen.hpp  level_io.cpp  level_io.hpp  madrona_escape_room_c_api.cpp  madrona_escape_room_c_api.h  mgr.cpp  mgr.hpp  replay_metadata.hpp  sim.cpp  sim.hpp  struct_export.cpp  test_c_wrapper.cpp  test_c_wrapper_cpu.cpp  test_c_wrapper_gpu.cpp  types.hpp  viewer.cpp  viewer_core.cpp  viewer_core.hpp  viewer_orig.cpp
tests/cpp/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  TEST_COVERAGE_ANALYSIS.md  cmake_install.cmake  test_asset_registry.cpp  test_simple_table.cpp  test_viewer_core.cpp
tests/cpp/data/: default.lvl  maze_test.lvl  maze_test.txt  simple_test.lvl  simple_test.txt  simple_test_old.lvl  two_spawn.lvl  two_spawn.txt
tests/cpp/e2e/: test_viewer_workflows.cpp
tests/cpp/fixtures/: compiled_level_compat.hpp  cpp_test_base.hpp  debug_capture.cpp  debug_capture.hpp  mock_components.hpp  reusable_gpu_test.hpp  test_base.cpp  test_base.hpp  test_level_helper.hpp  test_levels.hpp  test_main.cpp  viewer_test_base.hpp
tests/cpp/integration/: test_manager_from_replay.cpp  test_viewer_errors.cpp  test_viewer_input.cpp  test_viewer_integration.cpp
tests/cpp/test_data/levels/: complex.lvl  level1.lvl  level2.lvl  level3.lvl  manager_test.lvl  original.lvl  simple.lvl  tiles.lvl
tests/cpp/test_data/recordings/: deterministic.rec  format_test.csv  multi.rec  multi_world.rec  roundtrip.rec  simple.rec  size_test.rec  traj_run1.csv  trajectory2.csv  with_level.rec  with_orig_level.rec  with_seed.rec  world0.csv  world1.csv  world2.csv  world3.csv  world_count.rec
tests/cpp/test_levels/: quick_test.lvl
tests/cpp/unit/: test_asset_refactor.cpp  test_c_api_cpu.cpp  test_c_api_gpu.cpp  test_direct_cpp.cpp  test_file_inspector.cpp  test_level_utilities.cpp  test_manager_gpu.cpp  test_manager_gpu_stress.cpp  test_option_parser.cpp  test_persistence.cpp  test_recording_utilities.cpp  test_simple_direct.cpp  test_viewer_args.cpp  test_viewer_core.cpp  test_viewer_level_loading.cpp  test_viewer_replay.cpp  test_viewercore_trajectory.cpp
(+1494 files in other folders)
