[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "madrona-escape-room"
version = "0.1.1"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.7.0",
    "numpy>=1.20.0",
]


# Removed madrona-specific configuration
# The package is now built using standard setuptools

[tool.pytest.ini_options]
testpaths = ["tests/python"]
norecursedirs = ["external", "build", ".venv", "*.egg", "dist"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",  # For parallel test execution
    "mcp",  # For FastMCP server
]
