[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "madrona-escape-room"
version = "0.1.1"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.7.0",
    "numpy>=1.20.0",
    "cdataclass",
    "fastmcp>=2.11.3",
]

# Removed madrona-specific configuration
# The package is now built using standard setuptools

[tool.pytest.ini_options]
testpaths = ["tests/python"]
norecursedirs = ["external", "build", ".venv", "*.egg", "dist"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "custom_level: mark test to use a custom level (dict or string)",
    "ascii_level: mark test to use an ASCII level string",
    "json_level: mark test to use a JSON level string",
    "stress: mark test as a stress test with high resource usage",
    "slow: mark test as slow-running (can be skipped in regular runs)",
]

# Logging configuration
log_cli = true
log_cli_level = "ERROR"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_auto_indent = true
log_level = "DEBUG"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",  # For parallel test execution
    "mcp",  # For FastMCP server
    "validate-pyproject",
    "ruff",
    "pre-commit",
    "clangd-tidy>=1.1.0.post2",  # Used in git post-commit hooks
]
